--- a/blazor/AtomicFlow.Blazor.Client/_Imports.razor
+++ b/blazor/AtomicFlow.Blazor.Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using AtomicFlow.Blazor.Client
+@using Microsoft.AspNetCore.Components.Authorization
