--- a/blazor/AtomicFlow.Blazor.Client/_Imports.razor
+++ b/blazor/AtomicFlow.Blazor.Client/_Imports.razor
@@ -7,4 +7,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using AtomicFlow.Blazor.Client
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@attribute [Authorize]
