Added endpoint for testing

--- a/blazor/AtomicFlow.Blazor.Client/Pages/Counter.razor
+++ b/blazor/AtomicFlow.Blazor.Client/Pages/Counter.razor
@@ -15,7 +15,7 @@
 
     private async Task IncrementCount()
     {
-        await HabitsService.GetHabitsAsync();
+        await HabitsService.CreateHabitAsync();
         
         currentCount++;
     }
